--- a/jonas-budget-app/index.html
+++ b/jonas-budget-app/index.html
@@ -43,6 +43,60 @@
                     <button class="add__btn"><i class="ion-ios-checkmark-outline"></i></button>
                 </div>
             </div>
+
+            <div class="container">
+
+                <div class="income">
+                    <h2 class="icome__title">Income</h2>
+
+                    <div class="income__list">
+
+                        <div class="item" id="income-0">
+                            <div class="item__description">Salary</div>
+                            <div class="item__value">+ 2,100.00</div>
+                            <div class="item__delete">
+                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                            </div>
+                        </div>
+
+                        <div class="item" id="income-1">
+                            <div class="item__description">Sold car</div>
+                            <div class="item__value">+ 1,500.00</div>
+                            <div class="item__delete">
+                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="expenses">
+                    <h2 class="expenses__title">Expenses</h2>
+
+                    <div class="expenses__list">
+
+                        <div class="item" id="expense-0">
+                            <div class="item__description">Apartment rent</div>
+                            <div class="item__value">- 900.00</div>
+                            <div class="item__percentage">21%</div>
+                            <div class="item__delete">
+                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                            </div>
+                        </div>
+
+                        <div class="item" id="expense-1">
+                            <div class="item__description">Grocery shopping</div>
+                            <div class="item__value">- 435.28</div>
+                            <div class="item__percentage">10%</div>
+                            <div class="item__delete">
+                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                            </div>
+                        </div>
+
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     
         <script src="app.js"></script>
