--- a/jonas-budget-app/index.html
+++ b/jonas-budget-app/index.html
@@ -35,8 +35,8 @@
             <div class="add">
                 <div class="add__container">
                     <select class="add__type">
-                        <option value="income" selected>+</option>
-                        <option value="expense">-</option>
+                        <option value="inc" selected>+</option>
+                        <option value="exp">-</option>
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
@@ -48,53 +48,12 @@
 
                 <div class="income">
                     <h2 class="icome__title">Income</h2>
-
-                    <div class="income__list">
-
-                        <div class="item" id="income-0">
-                            <div class="item__description">Salary</div>
-                            <div class="item__value">+ 2,100.00</div>
-                            <div class="item__delete">
-                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                            </div>
-                        </div>
-
-                        <div class="item" id="income-1">
-                            <div class="item__description">Sold car</div>
-                            <div class="item__value">+ 1,500.00</div>
-                            <div class="item__delete">
-                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                            </div>
-                        </div>
-
-                    </div>
+                    <div class="income__list"></div>
                 </div>
 
                 <div class="expenses">
                     <h2 class="expenses__title">Expenses</h2>
-
-                    <div class="expenses__list">
-
-                        <div class="item" id="expense-0">
-                            <div class="item__description">Apartment rent</div>
-                            <div class="item__value">- 900.00</div>
-                            <div class="item__percentage">21%</div>
-                            <div class="item__delete">
-                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                            </div>
-                        </div>
-
-                        <div class="item" id="expense-1">
-                            <div class="item__description">Grocery shopping</div>
-                            <div class="item__value">- 435.28</div>
-                            <div class="item__percentage">10%</div>
-                            <div class="item__delete">
-                                <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                            </div>
-                        </div>
-
-                    </div>
-                    
+                    <div class="expenses__list"></div>
                 </div>
             </div>
         </div>
