--- a/jonas-budget-app/index.html
+++ b/jonas-budget-app/index.html
@@ -19,13 +19,13 @@
                 
                 <div class="budget__income">
                     <div class="budget__income--text">Income</div>
-                    <div class="budget__income--value">+ 4,300.00</div>
+                    <div class="budget__income--value">+ <span class="budget__income--value-text">4,300.00</span></div>
                     <div class="budget__income--percentage">&nbsp;</div>
                 </div>
                 
                 <div class="budget__expenses">
                     <div class="budget__expenses--text">Expenses</div>
-                    <div class="budget__expenses--value">- 1,954.36</div>
+                    <div class="budget__expenses--value">- <span class="budget__expenses--value-text">1,954.36</span></div>
                     <div class="budget__expenses--percentage">45%</div>
                 </div>
             </div>
